change some styles, delete some packages

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="./images/favicon.ico" />
+    <link rel="icon" href="./favicon.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Open+Sans&display=swap"
@@ -26,9 +26,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Frontend E-commerce Design using ReactJs"
+      content="Online shop of computer equipment"
     />
-    <link rel="apple-touch-icon" href="./images/favicon.ico" />
+    <link rel="apple-touch-icon" href="./favicon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Meserenko Shop</title>
   </head>
